Portfolio version 2.4.1 section experiences

--- a/src/index.html
+++ b/src/index.html
@@ -412,7 +412,10 @@
 									2022 - 2024 Front-end
 								</button>
 								<button type="button" class="navigation-career__title">
-									2009 - 2022 IT Center Grand
+									2012 - 2022 Developer
+								</button>
+								<button type="button" class="navigation-career__title">
+									2009 - 2012 IT Teacher
 								</button>
 							</nav>
 							<div data-tabs-body class="career__content content-career">
@@ -420,9 +423,7 @@
 									<div class="content-career__header">
 										<div class="content-career__title">
 											Front-end Developer
-											<a href="" class="content-career__link-title"
-												>Freelance</a
-											>
+											<div class="content-career__link-title">Freelance</div>
 										</div>
 										<div class="content-career__location">
 											Schwerin, Germany
@@ -431,12 +432,12 @@
 											Jun 2022 - Present · Part-time
 										</div>
 										<div class="content-career__categories">
-											<a href="" class="category-link">Java Script</a>
-											<a href="" class="category-link">GULP</a>
-											<a href="" class="category-link">Webpack</a>
-											<a href="" class="category-link">SCSS</a>
-											<a href="" class="category-link">CSS</a>
-											<a href="" class="category-link">HTML</a>
+											<div class="category-link">Java Script</div>
+											<div class="category-link">GULP</div>
+											<div class="category-link">Webpack</div>
+											<div class="category-link">SCSS</div>
+											<div class="category-link">CSS</div>
+											<div class="category-link">HTML</div>
 										</div>
 									</div>
 									<div class="content-career__main">
@@ -454,24 +455,22 @@
 										</ul>
 									</div>
 								</div>
-
 								<div class="content-career__body">
 									<div class="content-career__header">
 										<div class="content-career__title">
-											Developer of IT materials and teacher of computer courses
-											<a href="" class="content-career__link-title">Grand</a>
+											Developer of IT materials
+											<div class="content-career__link-title">Grand</div>
 										</div>
 										<div class="content-career__location">Rivne, Ukraine</div>
 										<div class="content-career__time">
-											Sep 2009 - Feb 2022 · Full-time
+											Nov 2012 - Feb 2022 · Full-time
 										</div>
 										<div class="content-career__categories">
-											<a href="" class="category-link">Web design</a>
-											<a href="" class="category-link">Programming</a>
-											<a href="" class="category-link">Graphic design</a>
-											<a href="" class="category-link">3D graphics</a>
-											<a href="" class="category-link">Video editing</a>
-											<a href="" class="category-link">Microsoft Office</a>
+											<div class="category-link">Web design</div>
+											<div class="category-link">Design UX/UI</div>
+											<div class="category-link">Office</div>
+											<div class="category-link">3D</div>
+											<div class="category-link">Video editing</div>
 										</div>
 									</div>
 									<div class="content-career__main">
@@ -480,16 +479,51 @@
 												Web design - HTML, CSS, Java Script
 											</li>
 											<li class="list-content-career__item">
-												Programming - Node.js
+												Design UX/UI - Figma, Illustrator, Inkscape
 											</li>
 											<li class="list-content-career__item">
-												Graphic design - Figma, Illustrator, Inkscape
+												MS Office - Word, Excel, PowerPoint
 											</li>
 											<li class="list-content-career__item">
-												Microsoft Office - Word, Excel, PowerPoint
+												3D - Blender, SketchUp
 											</li>
 											<li class="list-content-career__item">
-												3D graphics - Blender, SketchUp
+												Video editing - DaVinci Resolve, Premiere Pro
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="content-career__body">
+									<div class="content-career__header">
+										<div class="content-career__title">
+											IT Teacher of computer courses
+											<div class="content-career__link-title">Grand</div>
+										</div>
+										<div class="content-career__location">Rivne, Ukraine</div>
+										<div class="content-career__time">
+											Sep 2009 - Sep 2012 · Full-time
+										</div>
+										<div class="content-career__categories">
+											<div class="category-link">Web design</div>
+											<div class="category-link">Design UX/UI</div>
+											<div class="category-link">Office</div>
+											<div class="category-link">3D</div>
+											<div class="category-link">Video editing</div>
+										</div>
+									</div>
+									<div class="content-career__main">
+										<ul class="content-career__list list-content-career">
+											<li class="list-content-career__item">
+												Web design - HTML, CSS, Java Script
+											</li>
+											<li class="list-content-career__item">
+												Design UX/UI - Figma, Illustrator, Inkscape
+											</li>
+											<li class="list-content-career__item">
+												MS Office - Word, Excel, PowerPoint
+											</li>
+											<li class="list-content-career__item">
+												3D - Blender, SketchUp
 											</li>
 											<li class="list-content-career__item">
 												Video editing - DaVinci Resolve, Premiere Pro
@@ -513,50 +547,50 @@
 								<div class="timeline__item">
 									<div class="timeline__title">Kingston university</div>
 									<div class="timeline__text">
-										Master's degree - Software Engineering
+										Master's degree - Engineering
 									</div>
-									<div class="timeline__date">2019 - 2021</div>
+									<div class="timeline__date">2008 - 2009</div>
 								</div>
 								<div class="timeline__item">
 									<div class="timeline__title">Kingston university</div>
 									<div class="timeline__text">
-										Bachelor's degree - Computer Engineering
+										Bachelor's degree - Engineering
 									</div>
-									<div class="timeline__date">2015 - 2019</div>
+									<div class="timeline__date">2004 - 2008</div>
 								</div>
 								<div class="timeline__item">
-									<div class="timeline__title">Westminster School</div>
+									<div class="timeline__title">Real School</div>
 									<div class="timeline__text">
 										Diploma's degree - Mathematics
 									</div>
-									<div class="timeline__date">2013 - 2015</div>
+									<div class="timeline__date">1993 - 2004</div>
 								</div>
 							</div>
 							<div class="skills__content content-skills">
 								<div class="content-skills__text text">
 									<p>
-										For 5+ years, I have been continuously learning in the field
+										For 2 years, I have been continuously learning in the field
 										of front-end and experimenting with new technologies and
 										frameworks, and here you can see a summary of my skills.
 									</p>
 								</div>
 								<div class="content-skills__items">
 									<div class="content-skills__item">
-										<div class="content-skills__label">React</div>
+										<div class="content-skills__label">Javascript</div>
 										<div class="content-skills__line">
-											<span style="width: 67.5%"></span>
+											<span style="width: 80%"></span>
+										</div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">Typescript</div>
+										<div class="content-skills__line">
+											<span style="width: 60%"></span>
 										</div>
 									</div>
 									<div class="content-skills__item">
 										<div class="content-skills__label">Angular</div>
 										<div class="content-skills__line">
-											<span style="width: 52%"></span>
-										</div>
-									</div>
-									<div class="content-skills__item">
-										<div class="content-skills__label">Javascript</div>
-										<div class="content-skills__line">
-											<span style="width: 64%"></span>
+											<span style="width: 50%"></span>
 										</div>
 									</div>
 								</div>
