Portfolio version 2.5 section skills

--- a/src/index.html
+++ b/src/index.html
@@ -545,23 +545,27 @@
 						<div class="skills__body">
 							<div class="skills__timeline timeline">
 								<div class="timeline__item">
-									<div class="timeline__title">Kingston university</div>
+									<div class="timeline__title">
+										National university of water and environmental engineering
+									</div>
 									<div class="timeline__text">
-										Master's degree - Engineering
+										Master's degree - Civil engineer
 									</div>
 									<div class="timeline__date">2008 - 2009</div>
 								</div>
 								<div class="timeline__item">
-									<div class="timeline__title">Kingston university</div>
+									<div class="timeline__title">
+										National university of water and environmental engineering
+									</div>
 									<div class="timeline__text">
-										Bachelor's degree - Engineering
+										Bachelor's degree - Civil engineer
 									</div>
 									<div class="timeline__date">2004 - 2008</div>
 								</div>
 								<div class="timeline__item">
-									<div class="timeline__title">Real School</div>
+									<div class="timeline__title">School</div>
 									<div class="timeline__text">
-										Diploma's degree - Mathematics
+										Diploma's degree - High school diploma
 									</div>
 									<div class="timeline__date">1993 - 2004</div>
 								</div>
