Portfolio version 2.5.1 section skills finish

--- a/src/index.html
+++ b/src/index.html
@@ -538,64 +538,149 @@
 
 				<section data-fp-section class="page__skills skills">
 					<div class="skills__container">
-						<div class="skills__title title">
-							<div class="title__label">LEARNING PATH</div>
-							<h2 class="title__value">Education & Skills</h2>
-						</div>
 						<div class="skills__body">
-							<div class="skills__timeline timeline">
-								<div class="timeline__item">
-									<div class="timeline__title">
-										National university of water and environmental engineering
-									</div>
-									<div class="timeline__text">
-										Master's degree - Civil engineer
-									</div>
-									<div class="timeline__date">2008 - 2009</div>
+							<div class="skills__education">
+								<div class="skills__title title">
+									<div class="title__label">LEARNING PATH</div>
+									<h2 class="title__value">Education</h2>
 								</div>
-								<div class="timeline__item">
-									<div class="timeline__title">
-										National university of water and environmental engineering
+								<div class="skills__timeline timeline">
+									<div class="timeline__item">
+										<div class="timeline__title">
+											National university of water and environmental engineering
+										</div>
+										<div class="timeline__text">
+											Master's degree - Civil engineer
+										</div>
+										<div class="timeline__date">2008 - 2009</div>
 									</div>
-									<div class="timeline__text">
-										Bachelor's degree - Civil engineer
+									<div class="timeline__item">
+										<div class="timeline__title">
+											National university of water and environmental engineering
+										</div>
+										<div class="timeline__text">
+											Bachelor's degree - Civil engineer
+										</div>
+										<div class="timeline__date">2004 - 2008</div>
 									</div>
-									<div class="timeline__date">2004 - 2008</div>
-								</div>
-								<div class="timeline__item">
-									<div class="timeline__title">School</div>
-									<div class="timeline__text">
-										Diploma's degree - High school diploma
+									<div class="timeline__item">
+										<div class="timeline__title">School</div>
+										<div class="timeline__text">
+											Diploma's degree - High school diploma
+										</div>
+										<div class="timeline__date">1993 - 2004</div>
 									</div>
-									<div class="timeline__date">1993 - 2004</div>
 								</div>
 							</div>
 							<div class="skills__content content-skills">
+								<div class="skills__title title">
+									<div class="title__label">Technologies</div>
+									<h2 class="title__value">Skills</h2>
+								</div>
 								<div class="content-skills__text text">
-									<p>
-										For 2 years, I have been continuously learning in the field
-										of front-end and experimenting with new technologies and
-										frameworks, and here you can see a summary of my skills.
-									</p>
+									<p>Skills and technologies in my projects</p>
 								</div>
 								<div class="content-skills__items">
 									<div class="content-skills__item">
-										<div class="content-skills__label">Javascript</div>
-										<div class="content-skills__line">
-											<span style="width: 80%"></span>
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											Javascript
 										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
 									</div>
 									<div class="content-skills__item">
-										<div class="content-skills__label">Typescript</div>
-										<div class="content-skills__line">
-											<span style="width: 60%"></span>
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											CSS/SCSS
 										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
 									</div>
 									<div class="content-skills__item">
-										<div class="content-skills__label">Angular</div>
-										<div class="content-skills__line">
-											<span style="width: 50%"></span>
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											HTML
 										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">
+											Front-End Development
+										</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">
+											Responsive Web Design
+										</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">Front-End Design</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">Web Applications</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">
+											User Interface Design (UI)
+										</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">
+											User Experience (UX)
+										</div>
+										<div class="content-skills__line"></div>
+									</div>
+									<div class="content-skills__item">
+										<div class="content-skills__label">Git/GitHub</div>
+										<div class="content-skills__line"></div>
+									</div>
+								</div>
+								<div class="content-skills__text text">
+									<p>Skills on currently creating a project</p>
+								</div>
+								<div class="content-skills__items">
+									<div class="content-skills__item">
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											Angular
+										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
+									</div>
+									<div class="content-skills__item">
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											TypeScript
+										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
+									</div>
+									<div class="content-skills__item">
+										<div
+											class="content-skills__label content-skills__label--dark"
+										>
+											REST APIs
+										</div>
+										<div
+											class="content-skills__line content-skills__line--dark"
+										></div>
 									</div>
 								</div>
 							</div>
