--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -11,7 +11,9 @@
 						<a data-goto=".career" href="#" class="menu__link">Experience</a>
 					</li>
 					<li class="menu__item">
-						<a data-goto=".skills" href="#" class="menu__link">Education</a>
+						<a data-goto=".skills__education" href="#" class="menu__link"
+							>Education</a
+						>
 					</li>
 					<li class="menu__item">
 						<a data-goto=".contacts" href="#" class="menu__link">Contacts</a>
@@ -20,7 +22,9 @@
 			</nav>
 		</div>
 		<div class="header__actions">
-			<a href="" class="header__button">Resume</a>
+			<!--
+<a href="" class="header__button">Resume</a>
+-->
 			<button type="button" class="menu__icon icon-menu"><span></span></button>
 		</div>
 	</div>
