Portfolio 2.5.2	section experience svg arrow

--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,5 +1,5 @@
 <div data-fp-section class="page__bottom bottom-page">
-	<section class="page__contacts contacts">
+	<section data-watch class="page__contacts contacts">
 		<div class="contacts__container">
 			<div class="skills__title title">
 				<div class="title__label">Be in touch with me</div>
