--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -5,6 +5,11 @@
 			<nav class="menu__body">
 				<ul class="menu__list">
 					<li class="menu__item">
+						<a data-goto=".main-section" href="#" class="menu__link"
+							>About me</a
+						>
+					</li>
+					<li class="menu__item">
 						<a data-goto=".portfolio" href="#" class="menu__link">Portfolios</a>
 					</li>
 					<li class="menu__item">
