Portfolio 2.5.4	Error correction

--- a/src/index.html
+++ b/src/index.html
@@ -118,8 +118,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Furino/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -152,8 +153,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/FarmVest/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -186,8 +188,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Growfy/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -220,8 +223,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/HomePro/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -254,8 +258,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/TeaLand/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -288,8 +293,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Guitar/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -322,8 +328,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Relvise/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -359,8 +366,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/SmartSpace/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -393,8 +401,9 @@
 												</div>
 												<a
 													href="https://vitaliisoloninko.github.io/Portfolio/"
-													class="item-portfolio__link _icon-link"
-												></a>
+													class="item-portfolio__link"
+													><img src="@img/icons/link.svg" alt="link"
+												/></a>
 											</div>
 										</div>
 									</article>
@@ -476,11 +485,13 @@
 												Code and content optimization for fast work.
 											</li>
 											<li class="list-content-career__item">
-												Dynamic adaptation of web sites for any device.
+												Responsive web design for any device.
 											</li>
 											<li class="list-content-career__item">
-												Development of sites of different complexity and with
-												different features.
+												Development of different complexity.
+											</li>
+											<li class="list-content-career__item">
+												Using different features.
 											</li>
 										</ul>
 									</div>
@@ -488,7 +499,7 @@
 								<div class="content-career__body">
 									<div class="content-career__header">
 										<div class="content-career__title">
-											Developer of IT materials
+											IT educational Developer
 											<div class="content-career__link-title">Grand</div>
 										</div>
 										<div class="content-career__location">Rivne, Ukraine</div>
@@ -505,6 +516,9 @@
 									</div>
 									<div class="content-career__main">
 										<ul class="content-career__list list-content-career">
+											<li class="list-content-career__item">
+												Development of educational materials
+											</li>
 											<li class="list-content-career__item">
 												Web design - HTML, CSS, Java Script
 											</li>
@@ -526,7 +540,7 @@
 								<div class="content-career__body">
 									<div class="content-career__header">
 										<div class="content-career__title">
-											IT Teacher of computer courses
+											Computer courses IT Teacher
 											<div class="content-career__link-title">Grand</div>
 										</div>
 										<div class="content-career__location">Rivne, Ukraine</div>
