--- a/src/index.html
+++ b/src/index.html
@@ -93,15 +93,15 @@
 								<div class="portfolio__slide swiper-slide furino">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/Furino/"
+											href="https://vitaliisoloninko.github.io/furino/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/Furino.jpg" alt="Furino" />
+											<img src="@img/portfolio/furino.jpg" alt="Furino" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/Furino/"
+													href="https://vitaliisoloninko.github.io/furino/"
 													class="item-portfolio__link-title"
 													>Furino - Furniture shop
 												</a>
@@ -117,7 +117,7 @@
 													JSON
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/Furino/"
+													href="https://vitaliisoloninko.github.io/furino/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -128,15 +128,15 @@
 								<div class="portfolio__slide swiper-slide farmvest">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/FarmVest/"
+											href="https://vitaliisoloninko.github.io/farmvest/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/FarmVest.jpg" alt="FarmVest" />
+											<img src="@img/portfolio/farmvest.jpg" alt="FarmVest" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/FarmVest/"
+													href="https://vitaliisoloninko.github.io/farmvest/"
 													class="item-portfolio__link-title"
 													>FarmVest - Investment company
 												</a>
@@ -152,7 +152,7 @@
 													Webpack
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/FarmVest/"
+													href="https://vitaliisoloninko.github.io/farmvest/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -198,15 +198,15 @@
 								<div class="portfolio__slide swiper-slide homepro">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/HomePro/"
+											href="https://vitaliisoloninko.github.io/homepro/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/HomePro.jpg" alt="HomePro" />
+											<img src="@img/portfolio/homepro.jpg" alt="HomePro" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/HomePro/"
+													href="https://vitaliisoloninko.github.io/homepro/"
 													class="item-portfolio__link-title"
 													>HomePro - Home services
 												</a>
@@ -222,7 +222,7 @@
 													Webpack
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/HomePro/"
+													href="https://vitaliisoloninko.github.io/homepro/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
