v 2.5.6	new links in section portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -163,17 +163,17 @@
 								<div class="portfolio__slide swiper-slide crowfy">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/Growfy/"
+											href="https://vitaliisoloninko.github.io/growfy/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/Crowfy.jpg" alt="Crowfy" />
+											<img src="@img/portfolio/growfy.jpg" alt="Crowfy" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/Growfy/"
+													href="https://vitaliisoloninko.github.io/growfy/"
 													class="item-portfolio__link-title"
-													>Crowfy - Marketing agency</a
+													>Growfy - Marketing agency</a
 												>
 											</h4>
 											<div class="item-portfolio__footer">
@@ -187,7 +187,7 @@
 													HTML
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/Growfy/"
+													href="https://vitaliisoloninko.github.io/growfy/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -233,15 +233,15 @@
 								<div class="portfolio__slide swiper-slide tealand">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/TeaLand/"
+											href="https://vitaliisoloninko.github.io/tealand/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/TeaLand.jpg" alt="TeaLand" />
+											<img src="@img/portfolio/tealand.jpg" alt="TeaLand" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/TeaLand/"
+													href="https://vitaliisoloninko.github.io/tealand/"
 													class="item-portfolio__link-title"
 													>TeaLand - Cafe</a
 												>
@@ -257,7 +257,7 @@
 													Webpack
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/TeaLand/"
+													href="https://vitaliisoloninko.github.io/tealand/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -265,18 +265,18 @@
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide rhythm">
+								<div class="portfolio__slide swiper-slide guitar">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/Guitar/"
+											href="https://vitaliisoloninko.github.io/guitar/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/Guitar.jpg" alt="Guitar" />
+											<img src="@img/portfolio/guitar.jpg" alt="Guitar" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/Guitar/"
+													href="https://vitaliisoloninko.github.io/guitar/"
 													class="item-portfolio__link-title"
 													>Rhythm - Guitar shop
 												</a>
@@ -292,7 +292,7 @@
 													HTML
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/Guitar/"
+													href="https://vitaliisoloninko.github.io/guitar/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -303,15 +303,15 @@
 								<div class="portfolio__slide swiper-slide relvise">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/Relvise/"
+											href="https://vitaliisoloninko.github.io/relvise/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/Relvise.jpg" alt="Relvise" />
+											<img src="@img/portfolio/relvise.jpg" alt="Relvise" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/Relvise/"
+													href="https://vitaliisoloninko.github.io/relvise/"
 													class="item-portfolio__link-title"
 													>Relvise - Finance and Consultancy
 												</a>
@@ -327,7 +327,7 @@
 													HTML
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/Relvise/"
+													href="https://vitaliisoloninko.github.io/relvise/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -338,18 +338,18 @@
 								<div class="portfolio__slide swiper-slide smartspace">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/SmartSpace/"
+											href="https://vitaliisoloninko.github.io/smartspace/"
 											class="item-portfolio__image-ibg"
 										>
 											<img
-												src="@img/portfolio/SmartSpace.jpg"
+												src="@img/portfolio/smartspace.jpg"
 												alt="SmartSpace"
 											/>
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/SmartSpace/"
+													href="https://vitaliisoloninko.github.io/smartspace/"
 													class="item-portfolio__link-title"
 													>Relvise - Finance and Consultancy
 												</a>
@@ -365,7 +365,7 @@
 													HTML
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/SmartSpace/"
+													href="https://vitaliisoloninko.github.io/smartspace/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
@@ -376,15 +376,15 @@
 								<div class="portfolio__slide swiper-slide portfolio">
 									<article class="item-portfolio">
 										<a
-											href="https://vitaliisoloninko.github.io/Portfolio/"
+											href="https://vitaliisoloninko.github.io/portfolio/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/Portfolio.jpg" alt="Portfolio" />
+											<img src="@img/portfolio/portfolio.jpg" alt="Portfolio" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
 												<a
-													href="https://vitaliisoloninko.github.io/Portfolio/"
+													href="https://vitaliisoloninko.github.io/portfolio/"
 													class="item-portfolio__link-title"
 													>Portfolio - Site with my works
 												</a>
@@ -400,7 +400,7 @@
 													Webpack
 												</div>
 												<a
-													href="https://vitaliisoloninko.github.io/Portfolio/"
+													href="https://vitaliisoloninko.github.io/portfolio/"
 													class="item-portfolio__link"
 													><img src="@img/icons/link.svg" alt="link"
 												/></a>
