v 2.8.1	page works slider, html

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-	@@include('html/_head.htm',{ "title":"HomePage" })
+	@@include('html/_head.htm',{ "title":"Portfolio" })
 	<body>
 		<div data-fp class="wrapper">
 			@@include('html/_header.htm',{})
@@ -160,13 +160,13 @@
 										</div>
 									</article>
 								</div>
-								<div class="portfolio__slide swiper-slide crowfy">
+								<div class="portfolio__slide swiper-slide growfy">
 									<article class="item-portfolio">
 										<a
 											href="https://vitaliisoloninko.github.io/growfy/"
 											class="item-portfolio__image-ibg"
 										>
-											<img src="@img/portfolio/growfy.jpg" alt="Crowfy" />
+											<img src="@img/portfolio/growfy.jpg" alt="growfy" />
 										</a>
 										<div class="item-portfolio__body">
 											<h4 class="item-portfolio__title">
@@ -733,6 +733,7 @@
 						</div>
 					</div>
 				</section>
+
 				<!-- 
 				<section data-fp-section class="page__blog blog">
 					<div class="blog__container">
